generated/MERLANParser.py
# Generated from grammar/MERLAN.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MERLANParser ( Parser ):

    grammarFileName = "MERLAN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'..'", "'ENTITIES'", "'CONCRETE'", 
                     "'ABSTRACT'", "'REQUIREMENTS'", "'AND'", "'OR'", "'NOT'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'?'", "<INVALID>", "'*'", "<INVALID>", 
                     "<INVALID>", "'- '", "': '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ENTITIES", "CONCRETE", "ABSTRACT", "REQUIREMENTS", 
                      "AND", "OR", "NOT", "ID", "STRING", "FLOAT", "INT_NONZERO", 
                      "INT", "UNK", "SIGINT", "STAR", "NEWLINE", "WS", "HYPHEN", 
                      "COLON", "COMMENT" ]

    RULE_script = 0
    RULE_entities = 1
    RULE_attribute = 2
    RULE_concrete_entities = 3
    RULE_concrete_entity = 4
    RULE_abstract_entities = 5
    RULE_abstract_entity = 6
    RULE_requirements = 7
    RULE_requirement_definition = 8
    RULE_requirement = 9
    RULE_complex_requirement = 10
    RULE_simple_requirement = 11
    RULE_concrete_requirement = 12
    RULE_abstract_requirement = 13
    RULE_cardinality = 14
    RULE_min_cardinality = 15
    RULE_max_cardinality = 16

    ruleNames =  [ "script", "entities", "attribute", "concrete_entities", 
                   "concrete_entity", "abstract_entities", "abstract_entity", 
                   "requirements", "requirement_definition", "requirement", 
                   "complex_requirement", "simple_requirement", "concrete_requirement", 
                   "abstract_requirement", "cardinality", "min_cardinality", 
                   "max_cardinality" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    ENTITIES=4
    CONCRETE=5
    ABSTRACT=6
    REQUIREMENTS=7
    AND=8
    OR=9
    NOT=10
    ID=11
    STRING=12
    FLOAT=13
    INT_NONZERO=14
    INT=15
    UNK=16
    SIGINT=17
    STAR=18
    NEWLINE=19
    WS=20
    HYPHEN=21
    COLON=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MERLANParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MERLANParser.NEWLINE)
            else:
                return self.getToken(MERLANParser.NEWLINE, i)

        def entities(self):
            return self.getTypedRuleContext(MERLANParser.EntitiesContext,0)


        def requirements(self):
            return self.getTypedRuleContext(MERLANParser.RequirementsContext,0)


        def getRuleIndex(self):
            return MERLANParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = MERLANParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 34
                self.match(MERLANParser.NEWLINE)


            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 37
                self.entities()


            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 40
                self.requirements()


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 43
                self.match(MERLANParser.NEWLINE)


            self.state = 46
            self.match(MERLANParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITIES(self):
            return self.getToken(MERLANParser.ENTITIES, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def concrete_entities(self):
            return self.getTypedRuleContext(MERLANParser.Concrete_entitiesContext,0)


        def abstract_entities(self):
            return self.getTypedRuleContext(MERLANParser.Abstract_entitiesContext,0)


        def getRuleIndex(self):
            return MERLANParser.RULE_entities

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntities" ):
                listener.enterEntities(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntities" ):
                listener.exitEntities(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntities" ):
                return visitor.visitEntities(self)
            else:
                return visitor.visitChildren(self)




    def entities(self):

        localctx = MERLANParser.EntitiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entities)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(MERLANParser.ENTITIES)
            self.state = 49
            self.match(MERLANParser.NEWLINE)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 50
                self.concrete_entities()


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 53
                self.abstract_entities()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HYPHEN(self):
            return self.getToken(MERLANParser.HYPHEN, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MERLANParser.ID)
            else:
                return self.getToken(MERLANParser.ID, i)

        def COLON(self):
            return self.getToken(MERLANParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def STRING(self):
            return self.getToken(MERLANParser.STRING, 0)

        def FLOAT(self):
            return self.getToken(MERLANParser.FLOAT, 0)

        def INT(self):
            return self.getToken(MERLANParser.INT, 0)

        def UNK(self):
            return self.getToken(MERLANParser.UNK, 0)

        def getRuleIndex(self):
            return MERLANParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = MERLANParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(MERLANParser.HYPHEN)
            self.state = 57
            self.match(MERLANParser.ID)
            self.state = 58
            self.match(MERLANParser.COLON)
            self.state = 59
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112640) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 60
            self.match(MERLANParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Concrete_entitiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONCRETE(self):
            return self.getToken(MERLANParser.CONCRETE, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def concrete_entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.Concrete_entityContext)
            else:
                return self.getTypedRuleContext(MERLANParser.Concrete_entityContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_concrete_entities

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcrete_entities" ):
                listener.enterConcrete_entities(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcrete_entities" ):
                listener.exitConcrete_entities(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcrete_entities" ):
                return visitor.visitConcrete_entities(self)
            else:
                return visitor.visitChildren(self)




    def concrete_entities(self):

        localctx = MERLANParser.Concrete_entitiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_concrete_entities)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MERLANParser.CONCRETE)
            self.state = 63
            self.match(MERLANParser.NEWLINE)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 64
                self.concrete_entity()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Concrete_entityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MERLANParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MERLANParser.AttributeContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_concrete_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcrete_entity" ):
                listener.enterConcrete_entity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcrete_entity" ):
                listener.exitConcrete_entity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcrete_entity" ):
                return visitor.visitConcrete_entity(self)
            else:
                return visitor.visitChildren(self)




    def concrete_entity(self):

        localctx = MERLANParser.Concrete_entityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_concrete_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(MERLANParser.ID)
            self.state = 71
            self.match(MERLANParser.NEWLINE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 72
                self.attribute()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Abstract_entitiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABSTRACT(self):
            return self.getToken(MERLANParser.ABSTRACT, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def abstract_entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.Abstract_entityContext)
            else:
                return self.getTypedRuleContext(MERLANParser.Abstract_entityContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_abstract_entities

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbstract_entities" ):
                listener.enterAbstract_entities(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbstract_entities" ):
                listener.exitAbstract_entities(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbstract_entities" ):
                return visitor.visitAbstract_entities(self)
            else:
                return visitor.visitChildren(self)




    def abstract_entities(self):

        localctx = MERLANParser.Abstract_entitiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_abstract_entities)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MERLANParser.ABSTRACT)
            self.state = 79
            self.match(MERLANParser.NEWLINE)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 80
                self.abstract_entity()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Abstract_entityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MERLANParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MERLANParser.AttributeContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_abstract_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbstract_entity" ):
                listener.enterAbstract_entity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbstract_entity" ):
                listener.exitAbstract_entity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbstract_entity" ):
                return visitor.visitAbstract_entity(self)
            else:
                return visitor.visitChildren(self)




    def abstract_entity(self):

        localctx = MERLANParser.Abstract_entityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_abstract_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MERLANParser.ID)
            self.state = 87
            self.match(MERLANParser.NEWLINE)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 88
                self.attribute()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIREMENTS(self):
            return self.getToken(MERLANParser.REQUIREMENTS, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def requirement_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.Requirement_definitionContext)
            else:
                return self.getTypedRuleContext(MERLANParser.Requirement_definitionContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirements" ):
                return visitor.visitRequirements(self)
            else:
                return visitor.visitChildren(self)




    def requirements(self):

        localctx = MERLANParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MERLANParser.REQUIREMENTS)
            self.state = 95
            self.match(MERLANParser.NEWLINE)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.requirement_definition()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Requirement_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MERLANParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def requirement(self):
            return self.getTypedRuleContext(MERLANParser.RequirementContext,0)


        def getRuleIndex(self):
            return MERLANParser.RULE_requirement_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirement_definition" ):
                listener.enterRequirement_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirement_definition" ):
                listener.exitRequirement_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirement_definition" ):
                return visitor.visitRequirement_definition(self)
            else:
                return visitor.visitChildren(self)




    def requirement_definition(self):

        localctx = MERLANParser.Requirement_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_requirement_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MERLANParser.ID)
            self.state = 102
            self.match(MERLANParser.NEWLINE)
            self.state = 103
            self.requirement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complex_requirement(self):
            return self.getTypedRuleContext(MERLANParser.Complex_requirementContext,0)


        def simple_requirement(self):
            return self.getTypedRuleContext(MERLANParser.Simple_requirementContext,0)


        def getRuleIndex(self):
            return MERLANParser.RULE_requirement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirement" ):
                listener.enterRequirement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirement" ):
                listener.exitRequirement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirement" ):
                return visitor.visitRequirement(self)
            else:
                return visitor.visitChildren(self)




    def requirement(self):

        localctx = MERLANParser.RequirementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_requirement)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.complex_requirement()
                pass
            elif token in [5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.simple_requirement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_requirementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def AND(self):
            return self.getToken(MERLANParser.AND, 0)

        def OR(self):
            return self.getToken(MERLANParser.OR, 0)

        def requirement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.RequirementContext)
            else:
                return self.getTypedRuleContext(MERLANParser.RequirementContext,i)


        def NOT(self):
            return self.getToken(MERLANParser.NOT, 0)

        def getRuleIndex(self):
            return MERLANParser.RULE_complex_requirement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex_requirement" ):
                listener.enterComplex_requirement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex_requirement" ):
                listener.exitComplex_requirement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplex_requirement" ):
                return visitor.visitComplex_requirement(self)
            else:
                return visitor.visitChildren(self)




    def complex_requirement(self):

        localctx = MERLANParser.Complex_requirementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_complex_requirement)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                _la = self._input.LA(1)
                if not(_la==8 or _la==9):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.match(MERLANParser.NEWLINE)
                self.state = 112 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 111
                        self.requirement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 114 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(MERLANParser.NOT)
                self.state = 117
                self.match(MERLANParser.NEWLINE)
                self.state = 118
                self.requirement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_requirementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def abstract_requirement(self):
            return self.getTypedRuleContext(MERLANParser.Abstract_requirementContext,0)


        def concrete_requirement(self):
            return self.getTypedRuleContext(MERLANParser.Concrete_requirementContext,0)


        def getRuleIndex(self):
            return MERLANParser.RULE_simple_requirement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_requirement" ):
                listener.enterSimple_requirement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_requirement" ):
                listener.exitSimple_requirement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_requirement" ):
                return visitor.visitSimple_requirement(self)
            else:
                return visitor.visitChildren(self)




    def simple_requirement(self):

        localctx = MERLANParser.Simple_requirementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_simple_requirement)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.abstract_requirement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.concrete_requirement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Concrete_requirementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONCRETE(self):
            return self.getToken(MERLANParser.CONCRETE, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def cardinality(self):
            return self.getTypedRuleContext(MERLANParser.CardinalityContext,0)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MERLANParser.AttributeContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_concrete_requirement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcrete_requirement" ):
                listener.enterConcrete_requirement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcrete_requirement" ):
                listener.exitConcrete_requirement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcrete_requirement" ):
                return visitor.visitConcrete_requirement(self)
            else:
                return visitor.visitChildren(self)




    def concrete_requirement(self):

        localctx = MERLANParser.Concrete_requirementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_concrete_requirement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MERLANParser.CONCRETE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 126
                self.cardinality()


            self.state = 129
            self.match(MERLANParser.NEWLINE)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 130
                self.attribute()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Abstract_requirementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABSTRACT(self):
            return self.getToken(MERLANParser.ABSTRACT, 0)

        def NEWLINE(self):
            return self.getToken(MERLANParser.NEWLINE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MERLANParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MERLANParser.AttributeContext,i)


        def getRuleIndex(self):
            return MERLANParser.RULE_abstract_requirement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbstract_requirement" ):
                listener.enterAbstract_requirement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbstract_requirement" ):
                listener.exitAbstract_requirement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbstract_requirement" ):
                return visitor.visitAbstract_requirement(self)
            else:
                return visitor.visitChildren(self)




    def abstract_requirement(self):
